Make sure the width of the <body> is the minimum width in the backend to avoid issues on narrow devices

--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -6,6 +6,13 @@ body {
   background: $footerBackgroundColor;
 }
 
+.backend-layout,
+.application-layout {
+  body {
+    min-width: $siteWidth + ($gridColumnWidth / 2);
+  }
+}
+
 .page-wrapper {
   background: $bodyBackground;
 }
